package patterns.creational.abstractFactory.university;

public class Mufredat {
    public Mufredat(){};
}
