package patterns.creational.abstractFactory.university;

public class OgretimUyesi {
    public OgretimUyesi(){

    }
}
