package patterns.creational.abstractFactory.university;

public class Takvim {
    public Takvim(){};
}
