@startuml
class patterns.creational.abstractFactory.university.DorduncuSinifFactory {
+ DorduncuSinifFactory()
+ Ders dersYarat(String)
+ OgretimUyesi ogretimUyesiYarat(String)
+ Takvim takvimYarat(String)
+ Mufredat mufredatYarat(String)
}
class patterns.creational.abstractFactory.university.Ders {
+ Ders()
}
class patterns.creational.abstractFactory.university.Mufredat {
+  Mufredat()
}
interface patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory {
~ Ders dersYarat(String)
~ OgretimUyesi ogretimUyesiYarat(String)
~ Takvim takvimYarat(String)
~ Mufredat mufredatYarat(String)
}
class patterns.creational.abstractFactory.university.OgretimUyesi {
+  OgretimUyesi()
}
class patterns.creational.abstractFactory.university.Takvim {
+ Takvim()
}
class patterns.creational.abstractFactory.university.IkinciSinifFactory {
+ IkinciSinifFactory()
+ Ders dersYarat(String)
+ OgretimUyesi ogretimUyesiYarat(String)
+ Takvim takvimYarat(String)
+ Mufredat mufredatYarat(String)
}
class patterns.creational.abstractFactory.university.UcuncuSinifFactory {
+ UcuncuSinifFactory()
+ Ders dersYarat(String)
+ OgretimUyesi ogretimUyesiYarat(String)
+ Takvim takvimYarat(String)
+ Mufredat mufredatYarat(String)
}
class patterns.creational.abstractFactory.university.BirinciSinifFactory {
+ BirinciSinifFactory()
+ Ders dersYarat(String)
+ OgretimUyesi ogretimUyesiYarat(String)
+ Takvim takvimYarat(String)
+ Mufredat mufredatYarat(String)
}


patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory ..> patterns.creational.abstractFactory.university.Ders
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory ..> patterns.creational.abstractFactory.university.Mufredat
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory ..> patterns.creational.abstractFactory.university.Takvim
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory ..> patterns.creational.abstractFactory.university.OgretimUyesi
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory <|.. patterns.creational.abstractFactory.university.DorduncuSinifFactory
patterns.creational.abstractFactory.university.DorduncuSinifFactory ..> patterns.creational.abstractFactory.university.Ders
patterns.creational.abstractFactory.university.DorduncuSinifFactory ..> patterns.creational.abstractFactory.university.Mufredat
patterns.creational.abstractFactory.university.DorduncuSinifFactory ..> patterns.creational.abstractFactory.university.OgretimUyesi
patterns.creational.abstractFactory.university.DorduncuSinifFactory ..> patterns.creational.abstractFactory.university.Takvim
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory <|.. patterns.creational.abstractFactory.university.IkinciSinifFactory
patterns.creational.abstractFactory.university.IkinciSinifFactory ..> patterns.creational.abstractFactory.university.Ders
patterns.creational.abstractFactory.university.IkinciSinifFactory ..> patterns.creational.abstractFactory.university.Mufredat
patterns.creational.abstractFactory.university.IkinciSinifFactory ..> patterns.creational.abstractFactory.university.OgretimUyesi
patterns.creational.abstractFactory.university.IkinciSinifFactory ..> patterns.creational.abstractFactory.university.Takvim
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory <|.. patterns.creational.abstractFactory.university.UcuncuSinifFactory
patterns.creational.abstractFactory.university.UcuncuSinifFactory ..> patterns.creational.abstractFactory.university.Ders
patterns.creational.abstractFactory.university.UcuncuSinifFactory ..> patterns.creational.abstractFactory.university.Mufredat
patterns.creational.abstractFactory.university.UcuncuSinifFactory ..> patterns.creational.abstractFactory.university.OgretimUyesi
patterns.creational.abstractFactory.university.UcuncuSinifFactory ..> patterns.creational.abstractFactory.university.Takvim
patterns.creational.abstractFactory.university.BilgisayarMuhendisligiFactory <|.. patterns.creational.abstractFactory.university.BirinciSinifFactory
patterns.creational.abstractFactory.university.BirinciSinifFactory ..> patterns.creational.abstractFactory.university.Ders
patterns.creational.abstractFactory.university.BirinciSinifFactory ..> patterns.creational.abstractFactory.university.Mufredat
patterns.creational.abstractFactory.university.BirinciSinifFactory ..> patterns.creational.abstractFactory.university.OgretimUyesi
patterns.creational.abstractFactory.university.BirinciSinifFactory ..> patterns.creational.abstractFactory.university.Takvim
@enduml